# aria-slam

./: .gitignore  CLAUDE.md  CMakeLists.txt  Doxyfile  README.md  extensions.txt  main.cpp
docs/: AUDIT.md  BLACKWELL_SETUP.md  CLEAN_ARCHITECTURE_DIAGRAM.md  GPU_SETUP.md  H12_LEARN.md  MAIN_CPP_EXPLAINED.md  MIGRATION_STEPS.md  NEXT_PROMPT.md  PIPELINE_DIAGRAM.md  PIPELINE_DIAGRAM_LEGACY.md  STUDY_GUIDE.md
docs/milestones/: H01_SETUP.md  H01_SETUP_AUDIT.md  H02_FEATURE_EXTRACTION.md  H02_FEATURE_EXTRACTION_AUDIT.md  H03_FEATURE_MATCHING.md  H04_POSE_ESTIMATION.md  H05_OPENCV_CUDA.md  H05_OPENCV_CUDA_AUDIT.md  H06_TENSORRT.md  H06_TENSORRT_AUDIT.md  H07_EUROC_DATASET.md  H07_EUROC_DATASET_AUDIT.md  H08_SENSOR_FUSION.md  H08_SENSOR_FUSION_AUDIT.md  H09_LOOP_CLOSURE.md  H09_LOOP_CLOSURE_AUDIT.md  H10_POSE_GRAPH.md  H10_POSE_GRAPH_AUDIT.md  H11_CUDA_STREAMS.md  H11_CUDA_STREAMS_AUDIT.md  H12_CLEAN_ARCHITECTURE.md  H13_MULTITHREADING.md  H13_MULTITHREADING_AUDIT.md  H14_GPU_LOOPCLOSURE.md  H14_GPU_LOOPCLOSURE_AUDIT.md  H15_META_ARIA.md  H16_AUDIO_FEEDBACK.md
experiments/: benchmark_imu.cpp
include/: Frame.hpp  IMU.hpp  LoopClosure.hpp  Mapper.hpp  SyntheticIMU.hpp  TRTInference.hpp
include/adapters/gpu/: CudaMatcher.hpp  OrbCudaExtractor.hpp  YoloTrtDetector.hpp
include/core/: Types.hpp
include/factory/: PipelineFactory.hpp
include/interfaces/: IAriaDevice.hpp  IAudioFeedback.hpp  IFeatureExtractor.hpp  ILoopDetector.hpp  IMapper.hpp  IMatcher.hpp  IObjectDetector.hpp  ISensorFusion.hpp
include/legacy/: EuRoCReader.hpp  Frame.hpp  LoopClosure.hpp  TRTInference.hpp
include/pipeline/: SlamPipeline.hpp
learn/cpp_basics/: README.md
learn/cpp_basics/01_clases/: Contador.cpp  Contador.hpp
learn/cpp_basics/02_herencia/: Animal.hpp  Perro.cpp  Perro.hpp
learn/cpp_basics/03_interfaces/: Circulo.cpp  Circulo.hpp  IFigura.hpp  Rectangulo.cpp  Rectangulo.hpp
learn/cpp_basics/04_adapter/: AdapterTermometro.cpp  AdapterTermometro.hpp  ITermometro.hpp  SensorFahrenheit.hpp
scripts/: generate_engine.sh  setup_machine.sh
src/: EuRoCReader.cpp  Frame.cpp  IMU.cpp  LoopClosure.cpp  Mapper.cpp  TRTInference.cpp  euroc_eval.cpp  main.cpp
src/adapters/gpu/: CudaMatcher.cpp  OrbCudaExtractor.cpp
src/legacy/: EuRoCReader.cpp  Frame.cpp  LoopClosure.cpp  TRTInference.cpp
